# opaque-fresh-wasm

./: Caddyfile
api/: Cargo.toml  Dockerfile
api/src/: config.rs  db.rs  invitation.rs  main.rs  opaque.rs  rng.rs  session.rs  storage.rs  time.rs  user.rs
api/src/api/: mod.rs  session.rs  signin.rs  signout.rs  signup.rs  state.rs
frontend/: .gitignore  deno.json  fresh.config.ts  fresh.gen.ts  tailwind.config.ts
frontend/components/form/: Button.tsx  Label.tsx
frontend/components/icons/: RiEyeLine.tsx  RiEyeOffLine.tsx  RiLockLine.tsx
frontend/islands/: ErrorBox.tsx  SignInForm.tsx  SignUpForm.tsx  Signout.tsx
frontend/islands/form/: Password.tsx  Text.tsx
frontend/plugins/: loadWasm.ts
frontend/routes/: _app.tsx  _middleware.ts  index.tsx  signin.tsx  signup.tsx
frontend/rust/: Cargo.toml
frontend/rust/src/: lib.rs  opaque.rs  password.rs
frontend/utils/: api.ts  opaque.ts  preact.ts
