[package]
name = "fresh-auth-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
argon2 = "0.5.3"
async-trait = "0.1.78"
axum = "0.7.4"
base64ct = "1.6.0"
clap = { version = "4.5.3", features = ["derive", "wrap_help"] }
figment = { version = "0.10.15", features = ["env", "toml"] }
opaque-ke = { version = "3.0.0-pre.4", features = ["argon2"] }
parking_lot = "0.12.1"
rand = { version = "0.8.5", default-features = false, features = ["getrandom"] }
rand_chacha = "0.3.1"
rusqlite = "0.31.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
thread_local = "1.1.8"
tim = "0.0.1"
time = { version = "0.3.34", features = ["serde", "serde-human-readable"] }
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread"] }
zeroize = { version = "1.7.0", features = ["derive"] }

[dev-dependencies]
claym = "0.5.1"
figment = { version = "0.10.15", features = ["env", "toml", "test"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
