[package]
name = "fresh-auth-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
argon2 = "0.5.3"
axum = "0.7.5"
base64ct = { version = "1.6.0", features = ["std"] }
clap = { version = "4.5.4", features = ["derive", "wrap_help"] }
cookie = "0.18.1"
figment = { version = "0.10.15", features = ["env", "toml"] }
generic-array = "1.0.0"
parking_lot = "0.12.1"
rand = { version = "0.8.5", default-features = false, features = ["getrandom"] }
rand_chacha = "0.3.1"
rusqlite = "0.31.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
thread_local = "1.1.8"
time = { version = "0.3.34", features = ["serde", "serde-human-readable"] }
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread"] }
tower-http = { version = "0.5.2", features = ["auth"] }
tower-otel = "0.2.0"
tracing = "0.1.40"
zeroize = { version = "1.7.0", features = ["derive"] }

[dependencies.axum-extra]
version = "0.9.3"
default-features = false
features = ["cookie"]

[dependencies.mello]
git = "https://github.com/mattiapenati/mello.git"
features = ["kvstorage", "reverse-proxy", "trace"]

[dependencies.opaque-ke]
version = "3.0.0-pre.4"
default-features = false
features = ["argon2", "std", "ristretto255", "ristretto255-voprf"]

[dev-dependencies]
claym = "0.5.1"
figment = { version = "0.10.15", features = ["env", "toml", "test"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
