[package]
name = "fresh-auth-frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate_type = ["cdylib"]

[dependencies]
argon2 = "0.5.3"
base64ct = { version = "1.6.0", features = ["std"] }
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2.12", features = ["js"] }
itertools = "0.12.1"
opaque-ke = { version = "3.0.0-pre.4", features = ["argon2", "std"] }
rand = { version = "0.8.5", default-features = false, features = ["getrandom"] }
rand_chacha = "0.3.1"
strsim = "0.11.0"
wasm-bindgen = "0.2.92"
wee_alloc = "0.4.5"

[profile.release]
codegen-units = 1
incremental = true
lto = true
opt-level = "z"
